--- a/style.css
+++ b/style.css
@@ -43,10 +43,14 @@ body {
     font-size: 17px;
 }
 
+.search-bar {
+    outline-color: #686874; /* Normal color */
+    transition: outline-color 0.3s ease;
+}
+
 .search-bar:hover,
 .search-bar:focus {
-    outline: none;
-    background-color: #3d3d47;
+    outline-color: #8c8c9b; /* Transition color */
 }
 
 h1 {
@@ -86,20 +90,20 @@ BOOKMARKS
 .BookmarkContainer {
     display: inline-block;
     position: relative;
-    margin-top: 60px; /* Move the container lower */
+    margin-top: 60px;
 }
 
 .BookmarkButton {
     position: relative;
     display: block;
-    width: 80px; /* Set button width */
-    height: 80px; /* Set button height */
+    width: 80px;
+    height: 80px;
     text-align: center;
     border-radius: 8px;
-    background-color: #2e2e37; /* Background color of the button */
+    background-color: #2e2e37;
     text-decoration: none;
-    color: #ffffff; /* Text color */
-    outline: 1.5pt solid #686874; /* Add outline with white color */
+    color: #ffffff;
+    outline: 1.5pt solid #686874; 
 }
 
 .ButtonBackground {
@@ -109,30 +113,30 @@ BOOKMARKS
     width: 100%;
     height: 100%;
     border-radius: 10px;
-    background-color: #2e2e37; /* Set background color same as button */
-    z-index: -1; /* Behind the button content */
+    background-color: #2e2e37;
+    z-index: -1;
     box-shadow: 0 0 8px rgba(0, 0, 0, 0.5);
 }
 
 .ButtonImageContainer {
     position: relative;
-    z-index: 1; /* On top of the background */
-    text-align: center; /* Center the image horizontally */
+    z-index: 1;
+    text-align: center;
 }
 
 .ButtonImageContainer img {
-    max-width: 100%; /* Adjust image size */
-    max-height: 100%; /* Adjust image size */
+    max-width: 100%;
+    max-height: 100%;
     display: block;
-    margin: auto; /* Center the image vertically */
+    margin: auto;
 }
 
 .ButtonText {
     font-family: Inter;
     font-weight: 300;
-    font-size: 14px; /* Adjust text size */
-    color: #e0e0e0; /* Text color */
-    margin-top: 8px; /* Adjust spacing between button and text */
+    font-size: 14px;
+    color: #8f8f9e; 
+    margin-top: 8px;
 }
 
 
